--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.9",
+    "video.js": "^8.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
